--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -10,6 +10,17 @@
     .projects {
         grid-template-columns: repeat(3, 1fr);
     }
+
+    .about-info {
+        grid-template-areas:
+            'bio bio'
+            'job1 job2'
+            'job3 job4';
+
+        grid-template-columns: repeat(2, 1fr);
+        ;
+    }
+
 }
 
 // Tablets & Small Laptops
@@ -54,11 +65,11 @@
 
     .about-info {
         grid-template-areas:
-            'bioimage'
             'bio'
             'job1'
             'job2'
-            'job3';
+            'job3'
+            'job4';
 
         grid-template-columns: 1fr;
     }
