--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,13 +29,13 @@ h3 {
 
     &.sm-heading {
         margin-bottom: 2rem;
-        padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color, 2), 0.5);
+        // padding: 0.2rem 1rem;
+        // background: rgba(lighten($primary-color, 2), 0.5);
     }
 }
 
 a {
-    color: #fff;
+    color: set-text-color($primary-color);
     text-decoration: none;
 }
 
@@ -80,9 +80,9 @@ main {
     display: grid;
     grid-gap: 30px;
     grid-template-areas:
-        'bioimage bio bio'
-        'job1 job2 job3';
-    grid-template-columns: repeat(3, 1fr);
+        'bio bio bio bio'
+        'job1 job2 job3 job4';
+    grid-template-columns: repeat(4, 1fr);
 
     .bio-image {
         grid-area: bioimage;
@@ -106,6 +106,10 @@ main {
 
     .job-3 {
         grid-area: job3;
+    }
+
+    .job-4 {
+        grid-area: job4;
     }
 
     .job {
@@ -134,6 +138,68 @@ main {
     }
 }
 
+.hvrbox,
+.hvrbox * {
+	box-sizing: border-box;
+}
+.hvrbox {
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+	max-width: 100%;
+	height: auto;
+}
+.hvrbox img {
+	max-width: 100%;
+}
+.hvrbox .hvrbox-layer_bottom {
+	display: block;
+}
+.hvrbox .hvrbox-layer_top {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
+	color: #fff;
+	padding: 15px;
+	-moz-transition: all 0.4s ease-in-out 0s;
+	-webkit-transition: all 0.4s ease-in-out 0s;
+	-ms-transition: all 0.4s ease-in-out 0s;
+	transition: all 0.4s ease-in-out 0s;
+}
+.hvrbox:hover .hvrbox-layer_top,
+.hvrbox.active .hvrbox-layer_top {
+	opacity: 1;
+}
+.hvrbox .hvrbox-text {
+	text-align: center;
+	font-size: 18px;
+	display: inline-block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-moz-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+.hvrbox .hvrbox-text_mobile {
+	font-size: 15px;
+	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
+	border-top: 1px solid rgba(179, 179, 179, 0.7);
+	margin-top: 5px;
+	padding-top: 2px;
+	display: none;
+}
+.hvrbox.active .hvrbox-text_mobile {
+	display: block;
+}
+
 // Contact Page
 .boxes {
     display: flex;
@@ -150,13 +216,27 @@ main {
         @include easeOut;
 
         &:hover {
-            padding: 0.5rem 1.5rem;
+            padding: 1rem 2rem;
             background: $secondary-color;
             color: set-text-color($secondary-color);
 
             span {
                 color: set-text-color($secondary-color);
             }
+        }
+    }
+}
+
+.icons-contact {
+    margin-top: 1rem;
+    text-align: center;
+
+    a {
+        padding: 0.4rem;
+
+        &:hover {
+            color: $secondary-color;
+            @include easeOut();
         }
     }
 }
